--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1"
   },
